--- a/assets/shared/blocks/progress-bar/progress-bar-settings.scss
+++ b/assets/shared/blocks/progress-bar/progress-bar-settings.scss
@@ -8,6 +8,6 @@
 	}
 }
 
-.editor-styles-wrapper .wp-block-sensei-lms-course-progress {
+.wp-block-sensei-lms-course-progress {
 	margin: 10px 0;
 }
